submarine-cloud-v2/artifacts/submarine/submarine-database.yaml
---
# Source: submarine/templates/submarine-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: "submarine-database"
spec:
  ports:
    - name: "submarine-database"
      port: 3306
      targetPort: 3306
  clusterIP: None
  type: ClusterIP
  selector:
    app: "submarine-database"
---
# Source: submarine/templates/submarine-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "submarine-database"
spec:
  serviceName: submarine-database
  replicas: 1
  selector:
    matchLabels:
      app: "submarine-database"
  template:
    metadata:
      labels:
        app: "submarine-database"
    spec:
      serviceAccountName: "submarine-storage"
      containers:
        - name: "submarine-database"
          image: "apache/submarine:database-0.7.0"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: volume
              subPath: submarine-database
          readinessProbe:
            tcpSocket:
              port: 3306
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: submarine-database-pvc
