submarine-cloud-v2/artifacts/submarine/submarine-minio.yaml
---
# Source: submarine/templates/submarine-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: submarine-minio-service
spec:
  type: ClusterIP
  selector:
    app: submarine-minio
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
---
# Source: submarine/templates/submarine-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submarine-minio
spec:
  selector:
    matchLabels:
      app: submarine-minio
  template:
    metadata:
      labels:
        app: submarine-minio
    spec:
      containers:
      - name: submarine-minio-container
        image: minio/minio:RELEASE.2021-02-14T04-01-33Z
        imagePullPolicy: IfNotPresent
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        volumeMounts:
          - mountPath: "/data"
            name: "volume"
            subPath: "submarine-minio"
      volumes:
        - name: "volume"
          persistentVolumeClaim:
            claimName: "submarine-minio-pvc"
---
# Source: submarine/templates/submarine-minio.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: submarine-minio-ingressroute
# spec:
#   entryPoints:
#     - web
#   routes:
#   - kind: Rule
#     match: "PathPrefix(`/minio`)"
#     services:
#     - kind: Service
#       name: submarine-minio-service
#       port: 9000
