submarine-cloud-v2/artifacts/submarine/submarine-mlflow.yaml
---
# Source: submarine/templates/submarine-mlflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: submarine-mlflow-service
spec:
  type: ClusterIP
  selector:
    app: submarine-mlflow
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
# Source: submarine/templates/submarine-mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submarine-mlflow
spec:
  selector:
    matchLabels:
      app: submarine-mlflow
  template:
    metadata:
      labels:
        app: submarine-mlflow
    spec:
      containers:
      - name: submarine-mlflow-container
        image: apache/submarine:mlflow-0.7.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: "/logs"
            name: "volume"
            subPath: "submarine-mlflow"
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
        - name: "volume"
          persistentVolumeClaim:
            claimName: "submarine-mlflow-pvc"
---
# Source: submarine/templates/submarine-mlflow.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: submarine-mlflow-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: "PathPrefix(`/mlflow`)"
    services:
    - kind: Service
      name: submarine-mlflow-service
      port: 5000
